--- a/templates/create.html
+++ b/templates/create.html
@@ -1,12 +1,112 @@
 {%block create %}
-<div class="d-flex justify-content-center">
-    <div class="form-check form-check-inline ">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-        <label class="form-check-label" for="inlineRadio1">1</label>
+
+<div class="d-flex justify-content-center" style="margin-top:60px;">
+    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link" id="pills-add-new-items-tab" data-toggle="pill" href="#pills-add-new-items" role="tab"
+                aria-controls="pills-add-new-items" aria-selected="true" onclick="getAll('add')">Add new Items</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="pills-create-new-rss-tab" data-toggle="pill" href="#pills-create-new-rss" role="tab"
+                aria-controls="pills-create-new-rss" aria-selected="false">Create new RSS</a>
+        </li>
+    </ul>
+</div>
+
+<div class="container tab-content" id="pills-tabContent" style="margin-top:60px; max-width: 650px;">
+    <div class="tab-pane fade card card-body table-responsive" id="pills-add-new-items" role="tabpanel"
+        aria-labelledby="pills-add-new-items-tab">
+        <h5 class="text-center">Select a RSS feed</h5>
+        <table class="table table-hover">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">
+                        Title
+                    </th>
+                    <th scope="col">
+                        Add
+                    </th>
+                </tr>
+            </thead>
+            <tbody id="stbody">
+                {%block tbody%}{%endblock%}
+            </tbody>
+        </table>
     </div>
-    <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-        <label class="form-check-label" for="inlineRadio2">2</label>
+    <div class="tab-pane fade card card-body" id="pills-create-new-rss" role="tabpanel"
+        aria-labelledby="pills-create-new-rss-tab">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1">Title</span>
+            </div>
+            <input id="new_rss_title" type="text" class="form-control" placeholder="Enter title" aria-label="Title"
+                aria-describedby="basic-addon1" required>
+        </div>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon2">Link</span>
+            </div>
+            <input type="text" class="form-control" placeholder="Enter Link" aria-label="Link"
+                aria-describedby="basic-addon2">
+        </div>
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <span class="input-group-text">Description</span>
+            </div>
+            <textarea class="form-control" aria-label="Description"></textarea>
+        </div><br>
+        <div class="btn-group" aria-label="Basic example" style="margin-left:45%; margin-right:50%;">
+            <button id="create_new_rss_button" type="button" class="btn btn-primary" onclick="newfile()">Submit</button>
+        </div>
+        <div style="margin-top: 10px">
+            <div class="alert alert-success" role="alert" id="success-alert1">
+                    Success
+            </div>
+            <div class="alert alert-danger" role="alert" id="error-alert1">
+                    Error
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Add items</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1">Title</span>
+                    </div>
+                    <input id="new_item_title" type="text" class="form-control" placeholder="Enter title"
+                        aria-label="Title" aria-describedby="basic-addon1" required>
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon2">Link</span>
+                    </div>
+                    <input id="new_item_link" type="text" class="form-control" placeholder="Enter Link"
+                        aria-label="Link" aria-describedby="basic-addon2">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="newitem()">Save changes</button>
+            </div>
+        </div>
+        <div class="alert alert-success" role="alert" id="success-alert2">
+                Success
+        </div>
+        <div class="alert alert-danger" role="alert" id="error-alert2">
+                Error
+        </div>
     </div>
 </div>
 {%endblock%}
